infer/tests/codetoanalyze/c/errors/arithmetic/divide_by_zero.c
/*
 * Copyright (c) 2013 - Facebook.
 * All rights reserved.
 */

int divide_by_zero() {
  int x = 0;
  int y = 5;
  return y / x;
}
